fix margin to center elements on smaller screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,11 +9,6 @@ body {
 }
 /* Base style */
 
-.row > * {
-    padding-right: 0px !important;
-}
-
-
 p, label, span {
     color: white;
 }
